--- a/admin/telas/cadastro_cliente.html
+++ b/admin/telas/cadastro_cliente.html
@@ -24,7 +24,7 @@
     <main>
         <div class="div_cadastro container">
             <h1>Novo Cliente</h1>
-            <div>
+            <div class="caixa_inserir">
                 <h2>Nome</h2>
                 <h2>Email</h2>
             </div>
