--- a/admin/telas/cadastro_produtos.html
+++ b/admin/telas/cadastro_produtos.html
@@ -38,7 +38,7 @@
                 </div>
                 <div class="input-container">
                     <label class="input-label" for="descricao">Descrição:</label>
-                    <input name="preço" id="preço" class="input_descricao"  type="text" placeholder="Descrição" required data-descricao>
+                    <textarea name="" id="" cols="30" rows="10" name="preço" id="preço" class="input_descricao"  type="text" placeholder="Descrição" required data-descricao></textarea>
                     <span class="input-mensagem-erro">Esse campo não pode estar vazio</span>
                 </div>
                 <button type="submit" class="botao_cadastro">Cadastrar produto</button>
